# kouhai-bot

./: .gitignore  AGENTS.md  DEPENDENCIES.md  README.md  config.example.yaml  judge_prompt.txt  pyproject.toml
.github/workflows/: require-markdown-docs.yml
src/kouhai_bot/: achievements.py  config.py  context.py  curfew.py  echo.py  editorial_content.py  editorial_followup.py  editorial_preparation.py  eventlog.py  eventlog_backfill.py  friend_requests.py  llm.py  llm_config.py  main.py  private_judge.py  problem_content.py  problem_prefetch.py  problem_preparation.py  problem_summary.py  runtime.py  statement_render.py  tutorials.py  user_groups.py  worker.py
src/kouhai_bot/annotations/: __init__.py  exporter.py  store.py
src/kouhai_bot/handlers/: __init__.py  notice.py  shared.py  (+1 more)
tests/: test_achievements.py  test_annotations.py  test_cf_fetcher.py  test_cf_tutorial_agent.py  test_commands.py  test_config.py  test_echo.py  test_eventlog.py  test_eventlog_backfill.py  test_fetcher_config.py  test_friend_requests.py  test_main.py  test_main_cli.py  test_napcat.py  test_newproblem_notes.py  test_notice.py  test_picker_samples.py  test_picker_selection.py  test_problem_prefetch.py  test_problem_preparation.py  test_registry.py  test_scheduler.py  test_scrape_cf_tutorial.py  test_shared.py  test_tutorial_quality.py  test_tutorials.py  test_user_groups.py  test_worker.py
tools/: annotation_server.py  backfill_command_events.py  cf_tutorial_agent.py  scrape_cf_tutorial.py  summary_doublecheck.py  tutorial_tools.py
tools/annotation_web/: app.js  index.html  style.css
(+20 files in other folders)
